<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 Google Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Beware that items which use actionLayout (typically the ones we might see in the action
    bar) need to have their icons etc set programmatically in the activity. -->
    <item android:id="@+id/menu_item_search"
          android:orderInCategory="1"
          android:title="@string/menu_search"
          android:icon="@android:drawable/ic_menu_search"
          android:actionLayout="@layout/action_item"
          android:showAsAction="always"/>

    <item android:id="@+id/menu_item_dim"
          android:orderInCategory="2"
          android:title="@string/menu_toggle_dim"
          android:icon="@android:drawable/ic_menu_view"
          android:actionLayout="@layout/action_item"
          android:showAsAction="always"/>

    <item android:id="@+id/menu_item_time"
        android:orderInCategory="3"
        android:title="@string/menu_time"
        android:icon="@drawable/time_travel_icon"
        android:actionLayout="@layout/action_item"
        android:showAsAction="always"/>

    <item android:id="@+id/menu_item_settings"
          android:orderInCategory="4"
          android:title="@string/menu_settings"
          android:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_preferences"
          android:actionLayout="@layout/action_item"/>

    <item android:id="@+id/menu_item_location"
          android:orderInCategory="5"
          android:title="@string/location_management_title"
          android:icon="@drawable/ic_location"
          android:showAsAction="never"/>

    <!-- People don't always understand the swirly icon
        in the action bar -->
    <item android:id="@+id/menu_item_time2"
        android:orderInCategory="5"
        android:title="@string/menu_time"
        android:icon="@drawable/time_travel_icon"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_item_calibrate"
        android:orderInCategory="6"
        android:title="@string/menu_calibrate"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_item_gallery"
          android:orderInCategory="7"
          android:title="@string/menu_gallery"
          android:showAsAction="ifRoom"
          android:icon="@android:drawable/ic_menu_gallery"/>

    <item android:id="@+id/menu_item_diagnostics"
          android:orderInCategory="8"
          android:title="@string/menu_diagnostics"
        android:icon="@android:drawable/ic_menu_info_details"
          android:showAsAction="never"/>

    <item android:id="@+id/menu_item_tos"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_tos"/>

    <item android:id="@+id/menu_item_credits"
          android:orderInCategory="10"
          android:title="@string/menu_credits"
        android:icon="@android:drawable/ic_menu_myplaces"
          android:showAsAction="never"/>

    <item android:id="@+id/menu_item_tutorial"
          android:orderInCategory="11"
          android:title="@string/menu_tutorial"
          android:showAsAction="never"
          android:icon="@android:drawable/ic_menu_info_details"/>

    <item android:id="@+id/menu_item_help"
          android:orderInCategory="12"
          android:title="@string/menu_help"
          android:showAsAction="never"
          android:icon="@android:drawable/ic_menu_help"/>

</menu>
